--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         header {
-            background-color: #591296;
+            background-color: #510f8a;
             color: #fff;
             text-align: center;
             padding: 1em;
