--- a/index.html
+++ b/index.html
@@ -7,47 +7,127 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>RITA PESSOA</h1>
-        <p>Software and Computer Engineering Student</p>
+
+    <header class="header">
+        <div class="header-content">
+            <h1 class="site-title">🌈 RITA PESSOA</h1>
+            <p class="tagline">Coding Dreams into Reality</p>
+        </div>
     </header>
 
-    <section>
+    <section class="about-me">
         <h2>About Me</h2>
-        <p>Write a brief introduction about yourself, your passion for software and computer engineering, and your academic background.</p>
+        <p>Hey there! I'm Rita Pessoa, a passionate Software and Computer Engineering student on a journey to turn ideas into digital magic. Join me as I explore the realms of code and creativity.</p>
     </section>
 
-    <section>
+    <section class="skills card">
+        <h2>Digital Skills</h2>
+        <div>
+            <h3>Programming Languages</h3>
+            <ul>
+                <li>Python</li>
+                <li>JavaScript</li>
+                <li>C++</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Personal Skills</h3>
+            <ul>
+                <li>Critical Thinking</li>
+                <li>Creative</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Different Skills</h3>
+            <ul>
+                <li>Java</li>
+                <li>SQL</li>
+                <li>Reliability</li>
+                <li>HTML + CSS</li>
+                <li>Teamwork</li>
+                <li>Assembly</li>
+                <li>Git Beginner</li>
+                <li>Adobe Illustrator</li>
+                <li>Basic knowledge in Design and photo/video editing</li>
+                <li>DAW Software (Ableton, ProTools, Apple Logic Pro)</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="projects">
         <h2>Projects</h2>
         <ul>
             <li>
-                <h3>Project 1</h3>
-                <p>Provide a brief description of your project, technologies used, and your role in the project.</p>
+                <h3>🚀 Project Rainbow</h3>
+                <p>Embark on a colorful journey! I led a team to create a vibrant web application using the latest technologies, bringing joy to users worldwide.</p>
             </li>
             <li>
-                <h3>Project 2</h3>
-                <p>Another project description with relevant details.</p>
+                <h3>🤖 Project CodeWizard</h3>
+                <p>Join me in the magical world of coding! I enchanted this project with Python spells and JavaScript charms to make programming a magical experience for all.</p>
             </li>
         </ul>
     </section>
 
-    <section>
-        <h2>Skills</h2>
+    <section class="education card">
+        <h2>Education</h2>
+        <div>
+            <p><span class="date">09/10/2020 – CURRENT</span></p>
+            <p><strong>INFORMATION SYSTEMS AND COMPUTER ENGINEERING</strong></p>
+            <p>Instituto Superior Técnico (IST) - University of Lisbon</p>
+            <p>Website: <a href="https://tecnico.ulisboa.pt/pt/">IST</a></p>
+        </div>
+        <div>
+            <p><span class="date">21/12/2022 – 22/12/2022</span></p>
+            <p><strong>FOUNDATIONS OF USER EXPERIENCE (UX) DESIGN</strong></p>
+            <p>Google</p>
+            <p>Website: <a href="https://coursera.org/share/cf2dd282885254f3bbad21d1cd6200da">UX Design Course</a></p>
+        </div>
+        <div>
+            <p><span class="date">22/07/2023 – 24/07/2023</span></p>
+            <p><strong>INTRODUCTION TO BACK-END DEVELOPMENT</strong></p>
+            <p>Meta</p>
+            <p>Website: <a href="https://coursera.org/share/16662639b5703857342c390b4bd9ad78">Back-End Development Course</a></p>
+        </div>
+        <div>
+            <p><span class="date">01/01/2017 – 25/05/2017</span></p>
+            <p><strong>PROGRAMMING AND ROBOTICS MINI COURSE</strong></p>
+            <p>Fábrica Centro Ciência Viva de Aveiro - University of Aveiro</p>
+            <p>Website: <a href="https://www.ua.pt/pt/fabrica/">Programming and Robotics Mini Course</a></p>
+        </div>
+    </section>
+
+    <section class="work">
+        <h2>Work Experience</h2>
         <ul>
-            <li>Programming Languages: Java, Python, C++</li>
-            <li>Web Development: HTML, CSS, JavaScript</li>
-            <li>Database Management: MySQL, MongoDB</li>
-            <!-- Add more skills as needed -->
+            <li>
+                <h3>📲 TECH LEAD APP DEV</h3>
+                <p><span class="date">09/10/2020 – CURRENT</span></p>
+                <p>Instituto Superior Técnico (IST) - University of Lisbon</p>
+                <p>did bla bla bla</p>
+            </li>
+            <li>
+                <h3>🍽️ WAITER</h3>
+                <p><span class="date">09/10/2020 – CURRENT</span></p>
+                <p>Instituto Superior Técnico (IST) - University of Lisbon</p>
+                <p>did bla bla bla</p>
+            </li>
+            <li>
+                <h3>📚 MATH TUTOR - VOLUNTEERING</h3>
+                <p><span class="date">09/10/2020 – CURRENT</span></p>
+                <p>Instituto Superior Técnico (IST) - University of Lisbon</p>
+                <p>did bla bla bla</p>
+            </li>
         </ul>
     </section>
 
-    <section>
+    <section class="contact">
         <h2>Contact</h2>
-        <p>Feel free to reach out to me through email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+        <p>Ready for an adventure? Reach out to me through email: <a href="mailto:rita.pessoa.2002@gmail.com">rita.pessoa.2002@gmail.com</a></p>
     </section>
 
-    <footer>
-        &copy; 2023 RITA PESSOA
+    <footer class="footer">
+        &copy; 2023 RITA PESSOA | Crafted with ❤️ and ☕
     </footer>
+
 </body>
 </html>
